# internal/app/admin/internal/handler/sensitive/word/sensitivewordinfohandler.go
@@ -1,7 +1,7 @@
-package sensitiveword
+package word
 
 import (
-	"fgzs-single/internal/app/admin/internal/logic/sensitiveword"
+	"fgzs-single/internal/app/admin/internal/logic/sensitive/word"
 	"fgzs-single/internal/app/admin/internal/svc"
 	"fgzs-single/internal/app/admin/internal/types"
 	"fgzs-single/internal/define/constant"
@@ -24,7 +24,7 @@ func SensitiveWordInfoHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
 			response.Err(r, w, errorx.ParamErr.WithDetail(err))
 			return
 		}
-		l := sensitiveword.NewSensitiveWordInfoLogic(r.Context(), svcCtx)
+		l := word.NewSensitiveWordInfoLogic(r.Context(), svcCtx)
 		resp, err := l.SensitiveWordInfo(&req)
 		response.Http(r, w, resp, err)
 	}
